Update: Added profile image and navbar glass effect

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                     <span></span>
                     <span></span>
                 </div>
+                <div class="nav-left">
+                 <img src="./images/profile.png" alt="خيري جودة" class="nav-profile">
+                 </div>
                 <ul id="nav-menu">
                     <li><a href="#home">الرئيسية</a></li>
                     <li><a href="#about">من نحن</a></li>
