--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <span></span>
                 </div>
                 <div class="nav-left">
-                 <img src="./images/profile.png" alt="خيري جودة" class="nav-profile">
+                 <img src="images/profile.png" alt="خيري جودة" class="nav-profile">
                  </div>
                 <ul id="nav-menu">
                     <li><a href="#home">الرئيسية</a></li>
